@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2019 the original author or authors.
+ * Copyright 2012-2020 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,11 +16,13 @@
 
 package org.springframework.boot.loader.jar;
 
-import java.io.ByteArrayInputStream;
 import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.InputStream;
 import java.net.URL;
+import java.util.List;
+import java.util.jar.JarEntry;
+import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
@@ -47,34 +49,36 @@ class JarURLConnectionTests {
 	private JarFile jarFile;
 
 	@BeforeEach
-	public void setup(@TempDir File tempDir) throws Exception {
+	void setup(@TempDir File tempDir) throws Exception {
 		this.rootJarFile = new File(tempDir, "root.jar");
 		TestJarCreator.createTestJar(this.rootJarFile);
 		this.jarFile = new JarFile(this.rootJarFile);
 	}
 
 	@AfterEach
-	public void tearDown() throws Exception {
+	void tearDown() throws Exception {
 		this.jarFile.close();
 	}
 
 	@Test
 	void connectionToRootUsingAbsoluteUrl() throws Exception {
-		URL url = new URL("jar:file:" + getAbsolutePath() + "!/");
-		assertThat(JarURLConnection.get(url, this.jarFile).getContent()).isSameAs(this.jarFile);
+		URL url = new URL("jar:" + this.rootJarFile.toURI().toURL() + "!/");
+		Object content = JarURLConnection.get(url, this.jarFile).getContent();
+		assertThat(JarFileWrapper.unwrap((java.util.jar.JarFile) content)).isSameAs(this.jarFile);
 	}
 
 	@Test
 	void connectionToRootUsingRelativeUrl() throws Exception {
 		URL url = new URL("jar:file:" + getRelativePath() + "!/");
-		assertThat(JarURLConnection.get(url, this.jarFile).getContent()).isSameAs(this.jarFile);
+		Object content = JarURLConnection.get(url, this.jarFile).getContent();
+		assertThat(JarFileWrapper.unwrap((java.util.jar.JarFile) content)).isSameAs(this.jarFile);
 	}
 
 	@Test
 	void connectionToEntryUsingAbsoluteUrl() throws Exception {
-		URL url = new URL("jar:file:" + getAbsolutePath() + "!/1.dat");
+		URL url = new URL("jar:" + this.rootJarFile.toURI().toURL() + "!/1.dat");
 		try (InputStream input = JarURLConnection.get(url, this.jarFile).getInputStream()) {
-			assertThat(input).hasSameContentAs(new ByteArrayInputStream(new byte[] { 1 }));
+			assertThat(input).hasBinaryContent(new byte[] { 1 });
 		}
 	}
 
@@ -82,24 +86,24 @@ class JarURLConnectionTests {
 	void connectionToEntryUsingRelativeUrl() throws Exception {
 		URL url = new URL("jar:file:" + getRelativePath() + "!/1.dat");
 		try (InputStream input = JarURLConnection.get(url, this.jarFile).getInputStream()) {
-			assertThat(input).hasSameContentAs(new ByteArrayInputStream(new byte[] { 1 }));
+			assertThat(input).hasBinaryContent(new byte[] { 1 });
 		}
 	}
 
 	@Test
 	void connectionToEntryUsingAbsoluteUrlWithFileColonSlashSlashPrefix() throws Exception {
-		URL url = new URL("jar:file:/" + getAbsolutePath() + "!/1.dat");
+		URL url = new URL("jar:" + this.rootJarFile.toURI().toURL() + "!/1.dat");
 		try (InputStream input = JarURLConnection.get(url, this.jarFile).getInputStream()) {
-			assertThat(input).hasSameContentAs(new ByteArrayInputStream(new byte[] { 1 }));
+			assertThat(input).hasBinaryContent(new byte[] { 1 });
 		}
 	}
 
 	@Test
 	void connectionToEntryUsingAbsoluteUrlForNestedEntry() throws Exception {
-		URL url = new URL("jar:file:" + getAbsolutePath() + "!/nested.jar!/3.dat");
+		URL url = new URL("jar:" + this.rootJarFile.toURI().toURL() + "!/nested.jar!/3.dat");
 		JarURLConnection connection = JarURLConnection.get(url, this.jarFile);
 		try (InputStream input = connection.getInputStream()) {
-			assertThat(input).hasSameContentAs(new ByteArrayInputStream(new byte[] { 3 }));
+			assertThat(input).hasBinaryContent(new byte[] { 3 });
 		}
 		connection.getJarFile().close();
 	}
@@ -109,17 +113,17 @@ class JarURLConnectionTests {
 		URL url = new URL("jar:file:" + getRelativePath() + "!/nested.jar!/3.dat");
 		JarURLConnection connection = JarURLConnection.get(url, this.jarFile);
 		try (InputStream input = connection.getInputStream()) {
-			assertThat(input).hasSameContentAs(new ByteArrayInputStream(new byte[] { 3 }));
+			assertThat(input).hasBinaryContent(new byte[] { 3 });
 		}
 		connection.getJarFile().close();
 	}
 
 	@Test
 	void connectionToEntryUsingAbsoluteUrlForEntryFromNestedJarFile() throws Exception {
-		URL url = new URL("jar:file:" + getAbsolutePath() + "!/nested.jar!/3.dat");
+		URL url = new URL("jar:" + this.rootJarFile.toURI().toURL() + "!/nested.jar!/3.dat");
 		try (JarFile nested = this.jarFile.getNestedJarFile(this.jarFile.getEntry("nested.jar"))) {
 			try (InputStream input = JarURLConnection.get(url, nested).getInputStream()) {
-				assertThat(input).hasSameContentAs(new ByteArrayInputStream(new byte[] { 3 }));
+				assertThat(input).hasBinaryContent(new byte[] { 3 });
 			}
 		}
 	}
@@ -129,18 +133,18 @@ class JarURLConnectionTests {
 		URL url = new URL("jar:file:" + getRelativePath() + "!/nested.jar!/3.dat");
 		try (JarFile nested = this.jarFile.getNestedJarFile(this.jarFile.getEntry("nested.jar"))) {
 			try (InputStream input = JarURLConnection.get(url, nested).getInputStream()) {
-				assertThat(input).hasSameContentAs(new ByteArrayInputStream(new byte[] { 3 }));
+				assertThat(input).hasBinaryContent(new byte[] { 3 });
 			}
 		}
 	}
 
 	@Test
 	void connectionToEntryInNestedJarFromUrlThatUsesExistingUrlAsContext() throws Exception {
-		URL url = new URL(new URL("jar", null, -1, "file:" + getAbsolutePath() + "!/nested.jar!/", new Handler()),
+		URL url = new URL(new URL("jar", null, -1, this.rootJarFile.toURI().toURL() + "!/nested.jar!/", new Handler()),
 				"/3.dat");
 		try (JarFile nested = this.jarFile.getNestedJarFile(this.jarFile.getEntry("nested.jar"))) {
 			try (InputStream input = JarURLConnection.get(url, nested).getInputStream()) {
-				assertThat(input).hasSameContentAs(new ByteArrayInputStream(new byte[] { 3 }));
+				assertThat(input).hasBinaryContent(new byte[] { 3 });
 			}
 		}
 	}
@@ -150,7 +154,7 @@ class JarURLConnectionTests {
 		URL url = new URL("jar:file:" + getRelativePath() + "!/space nested.jar!/3.dat");
 		JarURLConnection connection = JarURLConnection.get(url, this.jarFile);
 		try (InputStream input = connection.getInputStream()) {
-			assertThat(input).hasSameContentAs(new ByteArrayInputStream(new byte[] { 3 }));
+			assertThat(input).hasBinaryContent(new byte[] { 3 });
 		}
 		connection.getJarFile().close();
 	}
@@ -160,14 +164,14 @@ class JarURLConnectionTests {
 		URL url = new URL("jar:file:" + getRelativePath() + "!/space%20nested.jar!/3.dat");
 		JarURLConnection connection = JarURLConnection.get(url, this.jarFile);
 		try (InputStream input = connection.getInputStream()) {
-			assertThat(input).hasSameContentAs(new ByteArrayInputStream(new byte[] { 3 }));
+			assertThat(input).hasBinaryContent(new byte[] { 3 });
 		}
 		connection.getJarFile().close();
 	}
 
 	@Test
 	void connectionToEntryUsingWrongAbsoluteUrlForEntryFromNestedJarFile() throws Exception {
-		URL url = new URL("jar:file:" + getAbsolutePath() + "!/w.jar!/3.dat");
+		URL url = new URL("jar:" + this.rootJarFile.toURI().toURL() + "!/w.jar!/3.dat");
 		try (JarFile nested = this.jarFile.getNestedJarFile(this.jarFile.getEntry("nested.jar"))) {
 			assertThatExceptionOfType(FileNotFoundException.class)
 					.isThrownBy(JarURLConnection.get(url, nested)::getInputStream);
@@ -176,7 +180,7 @@ class JarURLConnectionTests {
 
 	@Test
 	void getContentLengthReturnsLengthOfUnderlyingEntry() throws Exception {
-		URL url = new URL("jar:file:" + getAbsolutePath() + "!/nested.jar!/3.dat");
+		URL url = new URL("jar:" + this.rootJarFile.toURI().toURL() + "!/nested.jar!/3.dat");
 		try (JarFile nested = this.jarFile.getNestedJarFile(this.jarFile.getEntry("nested.jar"))) {
 			JarURLConnection connection = JarURLConnection.get(url, nested);
 			assertThat(connection.getContentLength()).isEqualTo(1);
@@ -185,7 +189,7 @@ class JarURLConnectionTests {
 
 	@Test
 	void getContentLengthLongReturnsLengthOfUnderlyingEntry() throws Exception {
-		URL url = new URL("jar:file:" + getAbsolutePath() + "!/nested.jar!/3.dat");
+		URL url = new URL("jar:" + this.rootJarFile.toURI().toURL() + "!/nested.jar!/3.dat");
 		try (JarFile nested = this.jarFile.getNestedJarFile(this.jarFile.getEntry("nested.jar"))) {
 			JarURLConnection connection = JarURLConnection.get(url, nested);
 			assertThat(connection.getContentLengthLong()).isEqualTo(1);
@@ -194,9 +198,17 @@ class JarURLConnectionTests {
 
 	@Test
 	void getLastModifiedReturnsLastModifiedTimeOfJarEntry() throws Exception {
-		URL url = new URL("jar:file:" + getAbsolutePath() + "!/1.dat");
+		URL url = new URL("jar:" + this.rootJarFile.toURI().toURL() + "!/1.dat");
 		JarURLConnection connection = JarURLConnection.get(url, this.jarFile);
 		assertThat(connection.getLastModified()).isEqualTo(connection.getJarEntry().getTime());
+	}
+
+	@Test
+	void entriesCanBeStreamedFromJarFileOfConnection() throws Exception {
+		URL url = new URL("jar:" + this.rootJarFile.toURI().toURL() + "!/");
+		JarURLConnection connection = JarURLConnection.get(url, this.jarFile);
+		List<String> entryNames = connection.getJarFile().stream().map(JarEntry::getName).collect(Collectors.toList());
+		assertThat(entryNames).hasSize(12);
 	}
 
 	@Test
@@ -220,8 +232,13 @@ class JarURLConnectionTests {
 				.isEqualTo("\u00e1/b/\u00c7.class");
 	}
 
-	private String getAbsolutePath() {
-		return this.rootJarFile.getAbsolutePath().replace('\\', '/');
+	@Test
+	void openConnectionCanBeClosedWithoutClosingSourceJar() throws Exception {
+		URL url = new URL("jar:" + this.rootJarFile.toURI().toURL() + "!/");
+		JarURLConnection connection = JarURLConnection.get(url, this.jarFile);
+		java.util.jar.JarFile connectionJarFile = connection.getJarFile();
+		connectionJarFile.close();
+		assertThat(this.jarFile.isClosed()).isFalse();
 	}
 
 	private String getRelativePath() {
